# cm-data-ingestion

./: .gitignore  README.md  config.json  config_worldpop.json  example.py  pyproject.toml
dbt/geobnd/: dbt_project.yml
dbt/gtfs/: dbt_project.yml  profiles.yml
dbt/osm/: dbt_project.yml  profiles.yml
dbt/ovm/: dbt_project.yml  profiles.yml
dbt/worldpop/: dbt_project.yml  profiles.yml
docs/: geoboundaries.md  gtfs.md  openstreetmap.md  overturemaps.md  technical_description.md  user_documentation.md  worldpop.md
docs/old/: gtfs.md  openstreetmap.md  worldpop.md
examples/: .python-version  ingest.py  ingest_geoboundaries.py  ingest_gtfs.py  ingest_osm.py  ingest_ovm.py  ingest_worldpop.py  load.py
examples/.dlt/: config.toml
pipelines/: config.json  geobnd_pipeline.py  gtfs_mobility_pipeline_cli.py  gtfs_pipeline.py  gtfs_transit_pipeline_cli.py  osm_pipeline.py  osm_pipeline_cli.py  ovm_pipeline.py  worldpop_pipeline.py
pipelines/common/: config.py  runners.py
pipelines/configs/: geobnd_config.json  gtfs_mobility_brno_config.json  gtfs_mobility_config.json  gtfs_mobility_ol_config.json  gtfs_mobility_test_config.json  gtfs_transit_config.json  osm_config.json  ovm_config.json  ovm_test_config.json  worldpop_config.json
pipelines/dbt/gtfs/: dbt_project.yml  profiles.yml
pipelines/dbt/ovm/: dbt_project.yml
src/cm_data_ingestion/: settings.py
tests/: pytest_ingestion_report.html  report.html  run_tests.sh  test__geobound.py  test__gtfs.py  test__osm.py  test__ovm.py  test__worldpop.py  utils.py
tests/.dlt/: config.toml
(+122 files in other folders)
