[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cm-data-ingestion"
version = "0.1.0"
description = "Data ingestion tools for various geodata sources"
authors = [{ name = "CleverMaps", email = "karel.psota@clevermaps.io" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "dlt[duckdb]>=1.7.0",
    "duckdb>=1.2.0",
    "pyarrow>=19.0.1",
    "mercantile>=1.2.1",
    "jsonschema>=4.24.0",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "py7zr>=1.0.0",
    "rioxarray>=0.19.0",
    "geopandas>=1.1.1"

]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cm_data_ingestion*"]

[tool.setuptools.package-data]
"cm_data_ingestion.pipelines" = [
    "dbt/**"
]